[package]
name = "userapputil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.0.10"
crc16 = "0.4.0"
btleplug = "0.10"
tokio = { version = "1.20", features = ["rt", "macros", "sync"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
uuid = "1.1"
futures = "0.3"
